--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,17 @@
 {
-  "extends": ["standard", "prettier", "prettier/standard"],
-  "plugins": ["svelte3"]
+  "parserOptions": {
+    "ecmaVersion": 2019,
+    "sourceType": "module"
+  },
+  "env": {
+    "es6": true,
+    "browser": true
+  },
+  "plugins": [
+    "svelte3"
+  ],
+  "overrides": [{
+      "files": ["**/*.svelte"],
+      "processor": "svelte3/svelte3"
+    }]
 }
