--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.5.0",
+    "eslint-plugin-tailwindcss": "3.6.0",
     "eslint-plugin-vue": "^9.0.0",
     "jsdom": "^20.0.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.14",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.1.5",
     "typescript": "~4.7.4",
     "vite": "^2.9.12",
     "vitest": "^0.15.1",
