--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,6 +3,9 @@
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
     "composite": true,
     "baseUrl": ".",
     "paths": {
