--- a/package.json
+++ b/package.json
@@ -11,30 +11,31 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.2.37"
+    "@fontsource/open-sans": "4.5.10",
+    "vue": "3.2.37"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.0",
-    "@types/jsdom": "^16.2.14",
+    "@rushstack/eslint-patch": "1.1.0",
+    "@types/jsdom": "16.2.14",
     "@types/node": "18.0.3",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/test-utils": "^2.0.0",
-    "@vue/tsconfig": "^0.1.3",
-    "autoprefixer": "^10.4.7",
+    "@vitejs/plugin-vue": "2.3.3",
+    "@vue/eslint-config-prettier": "7.0.0",
+    "@vue/eslint-config-typescript": "11.0.0",
+    "@vue/test-utils": "2.0.0",
+    "@vue/tsconfig": "0.1.3",
+    "autoprefixer": "10.4.7",
     "eslint": "8.19.0",
     "eslint-plugin-tailwindcss": "3.6.0",
-    "eslint-plugin-vue": "^9.0.0",
+    "eslint-plugin-vue": "9.0.0",
     "happy-dom": "6.0.2",
-    "jsdom": "^20.0.0",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.14",
-    "prettier": "^2.5.1",
-    "tailwindcss": "^3.1.5",
-    "typescript": "~4.7.4",
-    "vite": "^2.9.12",
-    "vitest": "^0.15.1",
-    "vue-tsc": "^0.38.1"
+    "jsdom": "20.0.0",
+    "npm-run-all": "4.1.5",
+    "postcss": "8.4.14",
+    "prettier": "2.5.1",
+    "tailwindcss": "3.1.5",
+    "typescript": "4.7.4",
+    "vite": "2.9.12",
+    "vitest": "0.15.1",
+    "vue-tsc": "0.38.1"
   }
 }
