--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,11 +3,11 @@
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "composite": true,
+    "target": "ES2015",
     "baseUrl": ".",
+    "lib": [
+      "ES2022"
+    ],
     "paths": {
       "@/*": ["./src/*"]
     }
